feat: add dark theme

--- a/tutorindigo/templates/indigo/lms/templates/certificates/accomplishment-base.html
+++ b/tutorindigo/templates/indigo/lms/templates/certificates/accomplishment-base.html
@@ -43,7 +43,7 @@ course_mode_class = course_mode if course_mode else ''
     % endif
 </head>
 
-<body class="layout-accomplishment view-valid-accomplishment ${dir_rtl} certificate certificate-${course_mode_class}" data-view="valid-accomplishment">
+<body class="layout-accomplishment view-valid-accomplishment ${dir_rtl} certificate certificate-${course_mode_class} {% if INDIGO_ENABLE_DARK_THEME %}indigo-dark-theme{% endif %}" data-view="valid-accomplishment">
 
     <div class="wrapper-view" dir="${dir_rtl}">
 
