--- a/tutorindigo/templates/indigo/lms/static/sass/extra/_header.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/extra/_header.scss
@@ -163,3 +163,78 @@ header.global-header {
         content: "";
     }
 }
+
+
+
+body.indigo-dark-theme {
+    background: $body-bg-d;
+    color: $text-color-d;
+    .window-wrap {
+        background: $body-bg-d;
+    }
+    .mobile-menu {
+        position: absolute;
+        left: 0;
+        top: 54px;
+        z-index: 9999;
+        margin: 0;
+        border: none;
+        border-bottom: 2px solid $primary;
+        width: 100%;
+        .mobile-nav-link {
+            a {
+                background: #454545;
+                color: $text-color-d;
+                &:hover, &.active {
+                    background: #323232;
+                    color: $text-color-d;
+                }
+            }
+        }
+    }
+    header.global-header {
+        background: $body-bg-d;
+        box-shadow: 0px 1px 2px 0px rgba(255, 255, 255, 0.8), 0px 1px 3px 0px rgba(255, 255, 255, 0.1);
+        .nav-links {
+            .main {
+                .nav-tab {
+                    a {
+                        color: $text-color-d;
+                        &.active, &:hover {
+                            color: $text-color-d;
+                            border-bottom: 2px solid $text-color-d;
+                        }
+                    }
+                }
+            }
+            .secondary {
+                .toggle-user-dropdown {
+                    background: $primary-d;
+                    color: $btn-color-d;
+                    &:after {
+                        border-color: $btn-color-d;
+                    }
+                }
+                .dropdown-user-menu {
+                    background: $light-overlay-d;
+                    box-shadow: 0px 0px 0px 1px rgba(255, 255, 255, 0.8), 0px 4px 6px -2px rgba(255, 255, 255, 0.05), 0px 10px 15px -3px rgba(255, 255, 255, 0.1);
+                    .dropdown-item {
+                        a {
+                            color: $text-color-primary;
+                            background: none;
+                            &:hover {
+                                background: $body-bg-d;
+                                color: $text-color-d;                         ;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .hamburger-menu {
+            .line {
+                background: $text-color-d;
+            }
+        }
+    }
+}
