feat:add dark theme images

--- a/tutorindigo/templates/indigo/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/partials/lms/theme/_extras.scss
@@ -321,6 +321,23 @@ body.view-statictab, body.view-instructordash, body.view-teams, body.view-wiki {
         background: no-repeat;
     }
   }
+  .container.about {
+    color: $text-color-primary;
+    h1 {
+      color: $primary-d;
+    }
+    a {
+      color: $primary-d;
+    }
+    .graphic-img {
+      img {
+        display: none;
+        &.dark {
+          display: block;
+        }
+      }
+    }
+  } 
 }
 body.view-teams {
   .container {
