--- a/tutorindigo/templates/indigo/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/partials/lms/theme/_extras.scss
@@ -277,6 +277,9 @@ nav.wrapper-preview-menu {
          width: 100%;
          display: block;
          height: auto;
+         &.dark {
+          display: none;
+         }
       }
     }
   }
