--- a/tutorindigo/templates/indigo/lms/static/sass/programs/_programs.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/programs/_programs.scss
@@ -495,7 +495,7 @@
             }
             a.btn {
                 background: $primary-d;
-                color: $text-color-d;
+                color: $btn-color-d;
             }
         }
     }
