--- a/tutorindigo/templates/indigo/lms/static/sass/courseware/_about.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/courseware/_about.scss
@@ -372,7 +372,7 @@ body.indigo-dark-theme {
             .media {
                 .hero {
                     &:after {
-                        background: $primary-light-d;
+                        border-color: $border-color-d;
                     }
                 }
             }
