--- a/tutorindigo/templates/indigo/lms/static/sass/certificates/_certificate.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/certificates/_certificate.scss
@@ -36,5 +36,43 @@ body.certificate {
             }
         }
     }
+    &.indigo-dark-theme {
+        background: $body-bg-d;
+        color: $text-color-d;
+        .banner-user .message-actions .action {
+            background: none !important;
+            text-shadow: none;
+            color: $text-color-d !important;
+        }
+        .wrapper-header {
+            background: $body-bg-d;
+            border-bottom: 1px solid $border-color;
+        }
+        &.layout-accomplishment.certificate-honor .accomplishment-main {
+            background: $primary-light-d;
+        }
+        .depth-card, .accomplishment-brief, .accomplishment-rendering {
+            background: $body-bg-d;
+        }
+        .accomplishment-rendering .accomplishment-type-label,
+        .accomplishment-metadata .metadata .value {
+            color: $text-color-d;
+        }
+    }
 }
-
+@media print {
+    body.indigo-dark-theme.certificate {
+        background: white;
+        color: black;
+        &.layout-accomplishment.certificate-honor .accomplishment-main {
+            background: white;
+        }
+        .depth-card, .accomplishment-brief, .accomplishment-rendering {
+            background: white;
+        }
+        .accomplishment-rendering .accomplishment-type-label,
+        .accomplishment-metadata .metadata .value {
+            color: black;
+        }
+    }
+}
