--- a/tutorindigo/templates/indigo/lms/static/sass/courseware/_discover.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/courseware/_discover.scss
@@ -226,6 +226,7 @@
                         background: $primary;
                         font-family: $font-family-title;
                         border: none;
+                        box-shadow: none !important;
                         @include media-breakpoint-up(sm) {
                             min-width: 100px;
                         }
