--- a/tutorindigo/templates/indigo/lms/templates/courseware/course_about_sidebar_header.html
+++ b/tutorindigo/templates/indigo/lms/templates/courseware/course_about_sidebar_header.html
@@ -59,9 +59,8 @@ from django.conf import settings
           </svg><span class="sr">${_("Post a Facebook message to say you've enrolled in this course")}</span>
       </a>
       <a href="${email_link}" class="share">
-        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="18" viewBox="0 0 22 18" fill="none">
-          <path d="M3 1H19C20.1 1 21 1.9 21 3V15C21 16.1 20.1 17 19 17H3C1.9 17 1 16.1 1 15V3C1 1.9 1.9 1 3 1Z" fill="#9CA3AF" stroke="#F2F7F8" stroke-linecap="round" stroke-linejoin="round"/>
-          <path d="M21 3L11 10L1 3" stroke="#F2F7F8" stroke-linecap="round" stroke-linejoin="round"/>
+        <svg xmlns="http://www.w3.org/2000/svg" width="22" height="17" viewBox="0 0 22 17" fill="none">
+          <path d="M21 2.85763C21 1.83593 20.1 1 19 1H3C1.9 1 1 1.83593 1 2.85763M21 2.85763V14.0034C21 15.0251 20.1 15.861 19 15.861H3C1.9 15.861 1 15.0251 1 14.0034V2.85763M21 2.85763L11 9.35932L1 2.85763" stroke="#9CA3AF" stroke-linecap="round" stroke-linejoin="round"/>
           </svg><span class="sr">${_("Email someone to say you've enrolled in this course")}</span>
       </a>
   </div>
