--- a/tutorindigo/templates/indigo/lms/static/sass/xblock/_xblock.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/xblock/_xblock.scss
@@ -262,3 +262,9 @@
         }
     }
 }
+.wrapper-problem-response {
+    select {
+        background: transparent;
+        color: $text-color-d;
+    }
+}
