--- a/tutorindigo/templates/indigo/lms/static/sass/courseware/_bookmarks.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/courseware/_bookmarks.scss
@@ -90,6 +90,7 @@
                 left: 5px;
                 font-size: 17px;
                 line-height: 17px;
+                color: $primary-d;
             }
             &:hover {
                 text-decoration: none;
