merge: merge tanveer/browser into hina/dark-theme

--- a/tutorindigo/templates/indigo/lms/static/sass/xblock/_xblock.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/xblock/_xblock.scss
@@ -4,6 +4,10 @@
     color: white !important;
 }
 .indigo-dark-theme { 
+    select {
+        background: transparent;
+        color: $text-color-d;
+    }
     .xblock--drag-and-drop {
         .keyboard-help-dialog {
             .modal-window {
@@ -77,9 +81,9 @@
     .xmodule_display.xmodule_ProblemBlock div.problem-progress {
         color: $text-color-d;
     }
-    .content-wrapper #main .btn-link {
+    .content-wrapper #main .xblock .btn-link {
         color: $primary-d;
-        &:hover {
+        &:hover, &:focus {
             color: $primary-d !important;
         }
     }
