--- a/tutorindigo/templates/indigo/lms/templates/static_templates/about.html
+++ b/tutorindigo/templates/indigo/lms/templates/static_templates/about.html
@@ -8,7 +8,7 @@
 <main id="main" aria-label="Content" tabindex="-1">
     <section class="container about">
         <h1>
-            <%block name="pageheader">${page_header or _("About Us")}</%block>
+            <%block name="pageheader">${page_header or _("About")}</%block>
         </h1>
         <p>
             <%block name="pagecontent">${page_content or _("This page left intentionally blank. Feel free to add your own content.")}</%block>
