--- a/tutorindigo/templates/indigo/lms/static/sass/home/_home.scss
+++ b/tutorindigo/templates/indigo/lms/static/sass/home/_home.scss
@@ -141,6 +141,9 @@ body.indigo-dark-theme {
     }
     p a:not(.btn), a:not(.btn) {
         color: $primary-d;
+        &:hover {
+            color: $primary-d;
+        }
     }
     .global-header .nav-links .secondary {
         .btn-holder {
